<resources>
    <string name="app_name">HubIoTTest</string>
    <string name="drawer_menu_item_floors_list">Floors List</string>
    <string name="drawer_menu_item_esp_config">Config ESP</string>
    <string name="channel_name">channel_1</string>
    <string name="channel_description">channel_1</string>
    <string name="drawer_menu_manage_gateway">Gateway Manager</string>

    <string name="title_devices">Bluetooth Device Scan</string>

    <string name="error_no_bluetooth">Bluetooth is not supported</string>
    <string name="error_no_ble">BLE is not supported</string>
    <string name="error_credentials">WiFi credentials incomplete!</string>
    <string name="error_sending">Error sending to device: %1$s</string>
    <string name="error_no_connection">Not connected</string>
    <string name="error_user_reject">"If you do not switch on Bluetooth this app doesn't work!"</string>

    <string name="no_data">No data</string>
    <string name="empty_response">"Empty response"</string>
    <string name="unknown_device">Unknown device</string>
    <string name="manual_pair_req">Please pair the device first</string>

    <string name="get_config">Reading ESP32 configuration</string>
    <string name="update_config">Writing new configuration</string>
    <string name="erase_config">Erasing ESP32 configuration</string>
    <string name="reset_device">Reset ESP32</string>

    <string name="type_bt">"Bluetooth Serial"</string>
    <string name="type_ble">"BLE"</string>
    <string name="type_mix">"Bluetooth Serial + BLE"</string>
    <string name="type_unknown">"Unknown type"</string>

    <!-- Button items -->
    <string name="write_button">Send config</string>
    <string name="read_button">Get config</string>
    <string name="erase_button">Erase config</string>
    <string name="reset_button">Reset ESP32</string>
    <string name="sel_num_ap">Enable two AP</string>

    <!-- Text input -->
    <string name="ssid_prim">Primary AP</string>
    <string name="pw_prim">Primary Password</string>
    <string name="ssid_sec">Secondary AP</string>
    <string name="pw_sec">Secondary Password</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop Scan</string>

    // Permission
    <string name="permission_dialog_title">Permission dialog</string>
    <string name="permission_dialog_button_caption">OK</string>
    <string name="permission_dialog_granted_message">Permission granted</string>
    <string name="permission_dialog_cant_ask_more">Permission declined and can\'t ask anymore</string>
    <string name="permission_dialog_user_declined">Permission declined</string>

    // Network failure
    <string name="error_network_call_failed_title">Oops</string>
    <string name="error_network_call_failed_message">network call failed</string>
    <string name="error_network_call_failed_positive_button_caption">Retry</string>
    <string name="error_network_call_failed_negative_button_caption">Close</string>
    <string name="error_network_call_failed">network call failed</string>

    // Bluetooth
    <string name="turning_on_bluetooth">Turning on bluetooth…</string>
    <string name="turning_off_bluetooth">Turning off bluetooth…</string>
    <string name="guide_when_off_bluetooth">When Bluetooth is turned on, your device can communicate with other nearby Bluetooth devices.</string>
    <string name="guide_when_on_bluetooth">Make sure the device you want to connect to is in pairing mode.</string>

    // Config ESP through server
    <string name="menu_action_change_ap">Change AP for selected gateways</string>
</resources>
