<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/readBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/center"
        android:onClick="onClickRead"
        android:text="@string/read_button"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/writeBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/center"
        android:onClick="onClickWrite"
        android:text="@string/write_button"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/eraseBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/readBT"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/center"
        android:onClick="onClickErase"
        android:text="@string/erase_button"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/resetBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/writeBT"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/center"
        android:onClick="onClickReset"
        android:text="@string/reset_button"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editCommand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eraseBT" />

    <TextView
        android:id="@+id/data_value"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editCommand"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:text="@string/no_data" />

</RelativeLayout>
